<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_category_clears"
        android:title="@string/settings_category_clear_data">
        <com.nvurgaft.redmonk.Dialogs.CustomDialogPreference
            android:key="pref_key_clear_contacts"
            android:summary="@string/setting_clear_contacts_summary"
            android:title="@string/setting_clear_contacts_title"
            android:dialogMessage="@string/warning"
            android:positiveButtonText="Yes"
            android:negativeButtonText="No" />
        <com.nvurgaft.redmonk.Dialogs.CustomDialogPreference
            android:key="pref_key_clear_reminders"
            android:summary="@string/setting_clear_reminders_summary"
            android:title="@string/setting_clear_reminders_title"
            android:dialogMessage="@string/warning"
            android:positiveButtonText="Yes"
            android:negativeButtonText="No"/>
        <com.nvurgaft.redmonk.Dialogs.CustomDialogPreference
            android:key="pref_key_clear_dc"
            android:summary="@string/setting_clear_consumptions_summary"
            android:title="@string/setting_clear_consumptions_title"
            android:dialogMessage="@string/warning"
            android:positiveButtonText="Yes"
            android:negativeButtonText="No"/>
        <com.nvurgaft.redmonk.Dialogs.CustomDialogPreference
            android:key="pref_key_clear_all"
            android:summary="@string/setting_clear_all_summary"
            android:title="@string/setting_clear_all_title"
            android:dialogMessage="@string/warning"
            android:positiveButtonText="Yes"
            android:negativeButtonText="No"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_category_about"
        android:title="@string/settings_category_about">
        <Preference
            android:key="pref_key_visit_site"
            android:summary="@string/setting_visit_site_summary"
            android:title="@string/setting_visit_site_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/nvurgaft/RedMonk" />
        </Preference>
        <Preference
            android:key="pref_key_about"
            android:summary="@string/setting_about_summary"
            android:title="@string/setting_about_title" />
    </PreferenceCategory>

</PreferenceScreen>