<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_dialog_contact_name"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignTop="@+id/dialogContactEditText"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogContactEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/dialogContactRoleEditText"
        android:layout_alignStart="@+id/dialogContactRoleEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_dialog_contact_role"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_below="@+id/dialogContactEditText"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogContactRoleEditText"
        android:layout_below="@+id/dialogContactEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/dialogFirstNumberEditText"
        android:layout_alignStart="@+id/dialogFirstNumberEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_dialog_1st_number"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:layout_below="@+id/dialogContactRoleEditText"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/dialogFirstNumberEditText"
        android:layout_below="@+id/dialogContactRoleEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_dialog_2nd_number"
        android:id="@+id/textView4"
        android:textAlignment="center"
        android:layout_below="@+id/dialogFirstNumberEditText"
        android:layout_toLeftOf="@+id/dialogFirstNumberEditText"
        android:layout_toStartOf="@+id/dialogFirstNumberEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/dialogSecondNumberEditText"
        android:layout_below="@+id/dialogFirstNumberEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_dialog_3rd_number"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:layout_below="@+id/dialogSecondNumberEditText"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/dialogThirdNumberEditText"
        android:layout_below="@+id/dialogSecondNumberEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>